--- a/tl2-tp5-2024-arcthomas.csproj
+++ b/tl2-tp5-2024-arcthomas.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update='db\Tienda.db'>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
